# uncertainty_ellipsoid

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md  network.md
notebooks/: api_usage.ipynb  display_data.ipynb
uncertainty_ellipsoid/: Khachiyan.py  __init__.py  api.py  dataset.py  features.py  plots.py  test.py  usage.py
uncertainty_ellipsoid/modeling/: loss.py  model.py  predict.py  train.py
