[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "uncertainty_ellipsoid"
version = "0.0.1"
description = "Learning the least conservative ellipsoid region given parameter uncertainty"
authors = [
  { name = "Siqi Wang" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["uncertainty_ellipsoid"]
force_sort_within_sections = true
